# model-watch

./: README.md  SKILL.md  pyproject.toml
model_watch/: __init__.py
model_watch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
