[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-watch"
version = "0.1.0"
description = "Benchmark AI API models over time, detect quality degradation, and get alerts when models get dumber"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["ai", "benchmark", "llm", "quality", "monitoring", "openai", "claude"]
urls = { repository = "https://github.com/minirr890112-byte/HermesMade" }

[project.scripts]
model-watch = "model_watch.cli:main"

[tool.setuptools.packages.find]
include = ["model_watch*"]
